# eunoia

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Cargo.toml.old  LABEL_PLACEMENT_PLAN.md  PLOTTING_NEXT_STEPS.md  README.md  TODO.md  Taskfile.yml  biome.jsonc  deny.toml  devenv.nix  panache.toml  versionary.jsonc
.cargo/: config.toml
.claude/rules/: docs.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: final_layout.instructions.md  nlm.instructions.md
.github/workflows/: build-and-test.yml  deploy.yml  julia-artifacts.yml  julia-rehearsal.yml  publish-crates.yml  publish-npm.yml  release.yml
crates/eunoia/: Cargo.toml
crates/eunoia-capi/: Cargo.toml  clippy.toml
crates/eunoia-capi/src/: lib.rs
crates/eunoia-nlm/: Cargo.toml  IMPLEMENTATION_PROGRESS.md  INTEGRATION_TESTS.md  QUICK_REFERENCE.md  README.md
crates/eunoia-nlm/examples/: iteration_bench.rs
crates/eunoia-nlm/src/: driver.rs  lib.rs  stopping.rs  types.rs  validation.rs
crates/eunoia-nlm/src/differentiation/: checking.rs  gradient.rs  hessian.rs  mod.rs
crates/eunoia-nlm/src/initialization/: defaults.rs  hessian.rs  mod.rs
crates/eunoia-nlm/src/linalg/: cholesky.rs  mod.rs  mvmult.rs  qr.rs
crates/eunoia-nlm/src/methods/: dogleg.rs  hookstep.rs  linesearch.rs  mod.rs
crates/eunoia-nlm/src/updates/: mod.rs  secant.rs  trust_region.rs
crates/eunoia-nlm/tests/: README.md  STATUS.md  integration_tests.rs
crates/eunoia-wasm/: Cargo.toml  clippy.toml
crates/eunoia-wasm/src/: lib.rs
crates/eunoia/benches/: final_tolerance.rs  initial_layout.rs
crates/eunoia/examples/: fit_profile.rs  issue45_bench.rs  issue89_bench.rs  label_placement.rs  mads_tolerance.rs  nonsmooth_bench.rs  plotting_demo.rs  quality_report.rs  restart_value.rs
crates/eunoia/proptest-regressions/fitter/: synthetic_groundtruth.txt
crates/eunoia/src/: constants.rs  error.rs  fitter.rs  geometry.rs  lib.rs  loss.rs  math.rs  plotting.rs  spec.rs  test_utils.rs  venn.rs
crates/eunoia/src/fitter/: clustering.rs  cmaes.rs  corpus_quality.rs  final_layout.rs  initial_layout.rs  layout.rs  normalize.rs  packing.rs  recording.rs  synthetic_groundtruth.rs
crates/eunoia/src/geometry/: diagram.rs  line.rs  operations.rs  point.rs  primitives.rs  projective.rs  rectangle.rs  shapes.rs  traits.rs
crates/eunoia/src/geometry/operations/: overlaps.rs
crates/eunoia/src/geometry/primitives/: bounds.rs  line.rs  point.rs
crates/eunoia/src/geometry/projective/: conic.rs  line.rs  point.rs
crates/eunoia/src/geometry/shapes/: circle.rs  ellipse.rs  polygon.rs  rectangle.rs  rotated_rectangle.rs  square.rs
crates/eunoia/src/math/: linear_algebra.rs  polynomial.rs
crates/eunoia/src/plotting/: clip.rs  inscribed.rs  placement.rs  plot_data.rs  regions.rs
crates/eunoia/src/spec/: combination.rs  input.rs  spec_builder.rs
crates/eunoia/src/test_utils/: corpus.rs
crates/eunoia/tests/: binding_walkthrough.rs  issue89_regression.rs  plotting_integration.rs
docs/in-progress/: complement.md
eulerr/R/: fit_diagram.R
eulerr/tests/testthat/: test-montecarlo.R  test-rconics.R
examples/: README.md
examples/html/: index.html
examples/quarto/: euler.qmd
julia/Eunoia/: Manifest.toml  Project.toml  README.md  ROADMAP.md
julia/Eunoia/ext/: EunoiaMakieExt.jl
julia/Eunoia/src/: Eunoia.jl  parse.jl  types.jl
julia/Eunoia/test/: runtests.jl
julia/Eunoia/test/makie/: .gitignore  Project.toml
nlm/: nlm.R  nlm.c  optimize.c
paper/: make-figures.mjs  panache.toml  paper.bib  paper.md
scripts/: README.md  generate_eulerr_test_cases.R
src/: diagram.rs  error.rs  fitter.rs  geometry.rs  lib.rs  math.rs  wasm.rs
src/diagram/: builder.rs  combination.rs  input.rs  spec.rs
src/fitter/: final_layout.rs  initial_layout.rs  layout.rs  optimal_separation.rs
src/geometry/: coord.rs  line.rs  line_segment.rs  operations.rs  point.rs  shapes.rs
src/geometry/operations/: overlaps.rs
src/geometry/shapes/: circle.rs
src/spec/: combination.rs  input.rs
ts/: CHANGELOG.md  README.md  build-web.mjs  index.ts  package.json  pnpm-lock.yaml  prepare-package.mjs  svg.ts  trajectory.ts  tsconfig.json
ts/tests/: svg.test.mjs
web/: .prettierignore  .prettierrc.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  version.config.js  vite.config.ts
web/public/: site.webmanifest
web/src/: App.svelte  app.css  app.d.ts  app.html
web/src/lib/: DiagramViewer.svelte  DiagramViewer.svelte.backup  colors.ts  export.ts  fit.ts  fit.worker.ts  fonts.ts  leader.ts  state.svelte.ts  theme.svelte.ts  version.ts
web/src/lib/assets/fonts/: NOTICE.md
web/src/lib/components/: AdvancedControls.svelte  DebugPanel.svelte  DiagramExample.svelte  DiagramSvg.svelte  DocsSidebar.svelte  ExportToolbar.svelte  FitTable.svelte  Footer.svelte  HeroWidget.svelte  MetricsPanel.svelte  PipelinePlayer.svelte  Section.svelte  SpecEditor.svelte  StyleControls.svelte  Tabs.svelte  ThemeToggle.svelte  TopNav.svelte
web/src/lib/docs/: SUMMARY.ts
web/src/lib/pages/: AboutPage.svelte  AppPage.svelte  CitePage.svelte  LandingPage.svelte
web/src/lib/types/: diagram.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/app/: +page.svelte  +page.ts
web/src/routes/cite/: +page.svelte  +page.ts
web/src/routes/docs/: +layout.svelte  +page.svx  +page.ts
web/src/routes/docs/bindings/c-abi/: +page.svx  +page.ts
web/src/routes/docs/bindings/resize-loops/: +page.svx
web/src/routes/docs/bindings/wasm-contract/: +page.svx
web/src/routes/docs/concepts/complement/: +page.svx  +page.ts
web/src/routes/docs/concepts/fitter-pipeline/: +page.svx  +page.ts
web/src/routes/docs/concepts/goodness-of-fit/: +page.svx  +page.ts
web/src/routes/docs/concepts/label-placement/: +page.svx  +page.ts
web/src/routes/docs/reference/: +page.svx  +page.ts
web/src/routes/sitemap.xml/: +server.ts
web/src/types/: diagram.ts
web/static/: llms.txt  robots.txt
(+14 files in other folders)
