[workspace]
resolver = "2"
members = ["crates/eunoia", "crates/eunoia-wasm"]
default-members = ["crates/eunoia"]

[workspace.package]
readme = "README.md"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
authors = ["Johan Larsson"]
license = "MIT"
repository = "https://github.com/jolars/eunoia"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(test)"] }
