[workspace]
resolver = "2"
members = ["crates/eunoia", "crates/eunoia-wasm"]
default-members = ["crates/eunoia"]

[workspace.package]
readme = "README.md"
version = "0.5.0"
edition = "2021"
rust-version = "1.81"
authors = ["Johan Larsson"]
license = "MIT"
repository = "https://github.com/jolars/eunoia"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(test)"] }

# Tests in `eunoia` are dominated by the optimization math
# (`compute_exclusive_regions`, LM, CMA-ES), which is ~23× slower in debug.
# Optimise the package itself in test builds while keeping `debug_assertions`
# on (so the `normalize_layout` post-fit assert and other `debug_assert!`s
# still fire). Drops a `cargo test -p eunoia --lib` run from ~32s to ~2-3s.
[profile.test.package.eunoia]
opt-level = 3
