[package]
name = "eunoia-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the eunoia library"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eunoia = { path = "../eunoia", features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
