[package]
name = "eunoia-wasm"
version.workspace = true
edition = "2024"
rust-version = "1.85"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the eunoia library"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eunoia = { path = "../eunoia", features = ["wasm", "plotting"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
