[package]
name = "eunoia-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the eunoia library"
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `parallel` is intentionally omitted: wasm has no threads, and it isn't a
# default feature, so the core fits single-threaded here.
eunoia = { path = "../eunoia" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
# getrandom's `wasm_js` backend is selected by the core crate's wasm32 target
# deps, so it no longer needs declaring here.
