[package]
name = "eunoia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A library for creating area-proportional Euler and Venn diagrams"
keywords = ["euler", "venn", "diagram", "visualization"]
categories = ["graphics", "visualization", "mathematics"]

[lints]
workspace = true

[dependencies]
argmin = "0.11"
argmin-math = { version = "0.5", features = ["nalgebra_v0_34"] }
# Migration target for the argmin + levenberg-marquardt path. Whole tree is
# aligned on nalgebra 0.34, so basin's `nalgebra` backend types unify with
# eunoia's own — no bridging, no second nalgebra major, no faer.
basin = { version = "0.3", default-features = false, features = ["nalgebra"] }
finitediff = "0.2"
i_overlay = { version = "~2.0", optional = true }
# Now only the MDS initial-layout `MdsSolver::LevenbergMarquardt` path
# (`initial_layout.rs`); the final-layout LM moved to basin. Removed when the
# MDS init stage migrates.
levenberg-marquardt = "0.15"
log = { version = "0.4", features = ["release_max_level_info"] }
nalgebra = "0.34"
num-complex = "0.4"
polylabel-mini = "0.1"
rand = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[features]
default = []
wasm = ["argmin/wasm-bindgen"]
plotting = ["dep:i_overlay"]
# Exposes the shared `test_utils::corpus` fixtures outside `cfg(test)` so
# example binaries (e.g. `examples/quality_report.rs`) can build the same
# spec set the integration tests use. Internal — not part of the public API
# contract.
corpus = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
proptest = "1"

[[bench]]
name = "initial_layout"
harness = false
required-features = ["corpus"]

[[bench]]
name = "final_tolerance"
harness = false
required-features = ["corpus"]
