[package]
name = "eunoia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "A library for creating area-proportional Euler and Venn diagrams"
keywords = ["euler", "venn", "diagram", "visualization"]
categories = ["graphics", "visualization", "mathematics"]

[lints]
workspace = true

[dependencies]
# Every optimizer runs on basin now: final-layout + MDS-init LM and L-BFGS,
# Nelder-Mead, and the circle-overlap Brent root-find. argmin, argmin-math and
# the levenberg-marquardt crate have all been removed. The whole tree is
# aligned on nalgebra 0.34, so basin's `nalgebra` backend types unify with
# eunoia's own — no bridging, no second nalgebra major, no faer.
basin = { version = "0.3", default-features = false, features = ["nalgebra"] }
finitediff = "0.2"
i_overlay = { version = "~2.0", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
nalgebra = "0.34"
num-complex = "0.4"
polylabel-mini = "0.1"
rand = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"

[features]
default = []
# Kept as a no-op so downstream crates (e.g. `eunoia-wasm`) can keep requesting
# it. It previously forwarded to `argmin/wasm-bindgen`; basin is deterministic
# and time-free, so no wasm-specific dependency wiring is needed.
wasm = []
plotting = ["dep:i_overlay"]
# Exposes the shared `test_utils::corpus` fixtures outside `cfg(test)` so
# example binaries (e.g. `examples/quality_report.rs`) can build the same
# spec set the integration tests use. Internal — not part of the public API
# contract.
corpus = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
proptest = "1"

[[bench]]
name = "initial_layout"
harness = false
required-features = ["corpus"]

[[bench]]
name = "final_tolerance"
harness = false
required-features = ["corpus"]
